# Meowcoin

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  Dockerfile  README.md  configure.ac  configure~  libmeowcoinkernel.pc.in  test_getblockstats.py  vcpkg.json
src/: .clang-tidy  CMakeLists.txt  Makefile.am  addrdb.cpp  addrdb.h  addressindex.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  auxpow.cpp  auxpow.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  cluster_linearize.h  coins.cpp  (+134 more)
src/algo/: CMakeLists.txt  auxpow.cpp
src/assets/: CMakeLists.txt  ans.cpp  ans.h  assetdb.cpp  assetdb.h  assets.cpp  assets.h  assetsnapshotdb.cpp  assetsnapshotdb.h  assettypes.cpp  assettypes.h  messages.cpp  messages.h  myassetsdb.cpp  myassetsdb.h  restricteddb.cpp  restricteddb.h  rewards.cpp  rewards.h  snapshotrequestdb.cpp  snapshotrequestdb.h
src/bench/: CMakeLists.txt  addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_meowcoin.cpp  bip324_ecdh.cpp  block_assemble.cpp  blockencodings.cpp  ccoins_caching.cpp  chacha20.cpp  checkblock.cpp  checkblockindex.cpp  checkqueue.cpp  cluster_linearize.cpp  coin_selection.cpp  connectblock.cpp  crypto_hash.cpp  descriptors.cpp  disconnected_transactions.cpp  duplicate_inputs.cpp  ellswift.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  index_blockfilter.cpp  load_external.cpp  lockedpool.cpp  logging.cpp  mempool_ephemeral_spends.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  obfuscation.cpp  parse_hex.cpp  peer_eviction.cpp  poly1305.cpp  pool.cpp  (+19 more)
src/common/: args.cpp  args.h  bloom.cpp  bloom.h  config.cpp  init.cpp  init.h  interfaces.cpp  messages.cpp  messages.h  netif.cpp  netif.h  pcp.cpp  pcp.h  run_command.cpp  run_command.h  settings.cpp  settings.h  signmessage.cpp  signmessage.h  system.cpp  system.h  types.h  url.cpp  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.cpp  stdin.h
src/consensus/: amount.h  consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: CMakeLists.txt  aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  common.h  hex_base.cpp  hex_base.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  mldsa.cpp  mldsa.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  scrypt.cpp  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/index/: addressindex.cpp  addressindex.h  base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  disktxpos.h  spentindex.cpp  spentindex.h  timestampindex.cpp  timestampindex.h  txindex.cpp  txindex.h
src/init/: common.cpp  common.h  meowcoin-gui.cpp  meowcoin-node.cpp  meowcoin-qt.cpp  meowcoin-wallet.cpp  meowcoind.cpp
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  mining.h  node.h  types.h  wallet.h
src/ipc/: CMakeLists.txt  context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/kernel/: CMakeLists.txt  blockmanager_opts.h  caches.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  disconnected_transactions.cpp  disconnected_transactions.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_removal_reason.cpp  mempool_removal_reason.h  meowcoinkernel.cpp  messagestartchars.h  notifications_interface.h  warning.h
src/logging/: timer.h
src/minisketch/: README.md  autogen.sh  configure.ac
src/node/: abort.cpp  abort.h  blockmanager_args.cpp  blockmanager_args.h  blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainstate.cpp  chainstate.h  chainstatemanager_args.cpp  chainstatemanager_args.h  coin.cpp  coin.h  coins_view_args.cpp  coins_view_args.h  connection_types.cpp  connection_types.h  context.cpp  context.h  database_args.cpp  database_args.h  eviction.cpp  eviction.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  kernel_notifications.cpp  kernel_notifications.h  mempool_args.cpp  mempool_args.h  mempool_persist.cpp  mempool_persist.h  mempool_persist_args.cpp  mempool_persist_args.h  miner.cpp  miner.h  mini_miner.cpp  mini_miner.h  minisketchwrapper.cpp  (+22 more)
src/policy/: ephemeral_policy.cpp  ephemeral_policy.h  feerate.cpp  feerate.h  fees.cpp  fees.h  fees_args.cpp  fees_args.h  packages.cpp  packages.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h  truc_policy.cpp  truc_policy.h
src/primitives/: algos.h  block.cpp  block.h  pureheader.cpp  pureheader.h  transaction.cpp  transaction.h  transaction_identifier.h
src/qt/: CMakeLists.txt  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  assetcontroldialog.cpp  assetcontroldialog.h  assetcontroltreewidget.cpp  assetcontroltreewidget.h  assetfilterproxy.cpp  assetfilterproxy.h  assetrecord.h  assetsdialog.cpp  assetsdialog.h  assettablemodel.cpp  assettablemodel.h  bantablemodel.cpp  bantablemodel.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createassetdialog.cpp  createassetdialog.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  freespacechecker.cpp  (+119 more)
src/rpc/: assets.cpp  auxpow_miner.cpp  (+33 more)
(+1548 files in other folders)
